<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/backgoundColor"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="313dp"
            android:layout_height="165dp"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="7dp"

            android:src="@drawable/hello"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="72dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/h1"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/h2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/h44"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/h4"
            />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="213dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="#FCF7F7"
            android:textColorHint="@color/textHint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="273dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="#FCF7F7"
            android:textColorHint="@color/textHint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="333dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"

            android:textColor="#FCF7F7"
            android:textColorHint="@color/textHint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="393dp"
            android:ems="10"
            android:hint="@string/num"
            android:inputType="phone"
            android:textColor="#FCF7F7"
            android:textColorHint="@color/textHint"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="440dp"
            android:text="@string/rem"
            android:textColor="#F8F6F6"
            android:textColorHint="#FCF5F3F3"
            android:textSize="18sp" />
        <!--    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--        android:id="@+id/b1"-->
        <!--        android:layout_width="100dp"-->
        <!--        android:layout_height="80dp"-->
        <!--        android:layout_gravity="center"-->
        <!--        android:layout_marginStart="8dp"-->
        <!--        android:layout_marginTop="8dp"-->
        <!--        android:layout_marginEnd="8dp"-->
        <!--        android:layout_marginBottom="8dp"-->
        <!--        android:src="@drawable/s6"-->
        <!--        app:civ_border_color="#FDFCFAFA"-->
        <!--        app:civ_border_width="1dp" />-->

        <Button
            android:id="@+id/signup_Btn"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="480dp"
            android:text="Submit" />

        <View
            android:id="@+id/divider"
            android:layout_width="260dp"
            android:layout_height="2dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="550dp"
            android:layout_marginBottom="78dp"
            android:background="@color/divider"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="560dp"
            android:text="@string/info"
            android:textColor="#FAF6F6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="255dp"
            android:layout_marginTop="557dp"
            android:text="@string/lgn"
            android:textColor="#378AA7"
            android:textSize="18sp" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>