<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/l1">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/l1"
        android:minHeight="800dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginLeft="101dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="623dp"
            android:src="@drawable/w3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:text="@string/aut"
            android:textColor="@color/divider"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView

            android:id="@+id/cardView"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"

            android:layout_marginLeft="8dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.047"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/prof1" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/na1" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uni" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info1" />
                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="@color/divider2"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                card_view:ignore="MissingConstraints"
                card_view:layout_editor_absoluteX="0dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/profile" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/na2" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uni" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info1" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info2"
                    android:textColor="@color/divider"
                    android:textSize="20dp" />


                <ImageView
                    android:id="@+id/im2"
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:layout_marginLeft="-270dp"
                    android:src="@drawable/y5" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-370dp"
                    android:layout_marginTop="270dp"
                    android:text="@string/info2"
                    android:textColor="@color/divider"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView

            android:id="@+id/cardView3"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginTop="4dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="49dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.319"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--<ImageView-->
                <!--android:layout_width="98dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="2dp"-->
                <!--android:src="@drawable/prof" />-->

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/ab" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="310dp"
            android:layout_marginRight="310dp"
            android:text="fosehoishfs"
            android:textColor="@color/backgoundColor2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>